# concoction

./: LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
concoction/: __init__.py  core.py
concoction/values/: dataclass.py  pydantic.py
tests/: test_core.py  test_set_global_config.py  test_values.py
